--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,7 +82,7 @@ vw = ancho de la pagina
 }
 /*--------------------- 4.5 esta al final -------------*/
 
-/*-------------------4.6 ---------------------------*/
+/*----------------------- 4.6 ---------------------------*/
 .grid-container {
 
     display: grid;
@@ -100,7 +100,7 @@ vw = ancho de la pagina
     border-radius: 0.4rem;
   }
 
-/*------------------------- 4.7*/
+/*------------------------- 4.7 ---------------------------*/
 .animacion {
     width: 100px;
     height: 100px;
